# dailies

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  biome.json  package-lock.json
.github/workflows/: deploy_backend.yml
backend/: Cargo.toml  Dockerfile  fly.toml  temp
backend/src/: db.rs  error.rs  main.rs  payloads.rs
backend/src/routes/: delete_user.rs  get_calendar.rs  get_month.rs  get_month_temp.rs  mod.rs  update_day.rs  update_task.rs  update_task_complete.rs  update_tasks.rs
frontend/: .eslintrc.json  .gitignore  index.html  manifest.json  package.json  tsconfig.json
frontend/public/: manifest.json
frontend/public/.well-known/: assetlinks.json
frontend/src/: App.css  App.tsx  main.tsx  types.ts
frontend/src/components/: index.ts
frontend/src/components/Button/: Button.module.css  Button.styles.ts  Button.tsx
frontend/src/components/CheckListItem/: CheckListItem.styles.ts  CheckListItem.tsx
frontend/src/components/CheckTaskList/: CheckTaskList.module.css  CheckTaskList.styles.ts  CheckTaskList.tsx
frontend/src/components/DayGlobe/: DayGlobe.module.css  DayGlobe.styles.ts  DayGlobe.tsx
frontend/src/components/Header/: Header.tsx  (+3 more)
frontend/src/config/: api.ts  index.ts
frontend/src/hooks/: index.ts  useAuth.ts  useCalendar.ts  useCalendarQuery.ts  useGetMonth.ts  useUpdateDay.ts
frontend/src/lib/: supabase.ts
frontend/src/libs/: axios.ts  index.ts  supabase.ts
frontend/src/pages/: index.tsx
frontend/src/res/: Favicon.tsx
frontend/src/utils/: AuthRoutes.tsx  calculateFillPercentage.tsx  index.ts  lerp.tsx  setFavicon.tsx
(+26 files in other folders)
