[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
chrono = "0.4.26"
dotenvy = "0.15.7"
postgrest = "1.5.0"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.0", features = ["v4", "fast-rng"] }