[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
axum-macros = "0.3.7"
chrono = "0.4.26"
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
postgrest = "1.5.0"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
supabase = "0.0.0"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["cors"] }
uuid = { version = "1.4.0", features = ["v4", "fast-rng"] }
