[package]
name = "dailies-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
chrono = "0.4.31"
chrono-tz = "0.8.3"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
postgrest = "1.6.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
